--- a/.githubworkflows/terraform.yaml
+++ b/.githubworkflows/terraform.yaml
@@ -24,13 +24,14 @@ jobs:
         with:
           terraform_version: 1.5.0
 
-      # Configure AWS credentials
-      - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v2
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-1  # Match the region in backend.tf
+    name: Configure AWS Credentials
+  uses: aws-actions/configure-aws-credentials@v2
+  with:
+    role-to-assume: arn:aws:iam::147997118822:role/GitHubActionsMultiples3Role
+    aws-region: us-east-1
+    role-session-name: GitHubActionsSession
+
+      # Install Terraform dependencies
 
       # Initialize Terraform (sets up S3 backend)
       - name: Terraform Init
