--- a/.githubworkflows/terraform.yaml
+++ b/.githubworkflows/terraform.yaml
@@ -24,14 +24,13 @@ jobs:
         with:
           terraform_version: 1.5.0
 
-    name: Configure AWS Credentials
-  uses: aws-actions/configure-aws-credentials@v2
-  with:
-    role-to-assume: arn:aws:iam::147997118822:role/GitHubActionsMultiples3Role
-    aws-region: us-east-1
-    role-session-name: GitHubActionsSession
-
-      # Install Terraform dependencies
+      # Configure AWS Credentials via OIDC
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          role-to-assume: arn:aws:iam::147997118822ActionsMultiples3Role
+          aws-region: us-east-1
+          role-session-name: GitHubActionsSession
 
       # Initialize Terraform (sets up S3 backend)
       - name: Terraform Init
